fixed buttons too close to edge of screen

--- a/preact-client/src/layouts/NavBottomButtons/NavBottomButtons.module.css
+++ b/preact-client/src/layouts/NavBottomButtons/NavBottomButtons.module.css
@@ -1,6 +1,7 @@
 .container {
 	gap: 1rem;
-	width: 100%;
+	width: 92%;
+	margin: 0 auto;
 }
 
 .heading {
